--- a/blog.html
+++ b/blog.html
@@ -5,9 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Google Font API -->
     <link href='https://fonts.googleapis.com/css?family=Ms Madi' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
+    <!-- Bootstrap 5.1.3 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- FontAwesome -->
+    <script src="asset/fontawesome-free-6.1.1-web/js/all.js"></script>
+    <!-- Eksternal CSS -->
     <link rel="stylesheet" href="style_home.css" />
     <link rel="stylesheet" href="style_blog.css">
     <title>Document</title>
@@ -17,7 +23,7 @@
     <!-- Navigasi Start -->
     <nav class="navbar flex-column">
         <div class="navbar-brand mb-4 mt-4 mb-sm-0 mt-sm-0">
-            <img src="asset/img/brand.png" alt="logo" class="logo img-fluid ms-3 ms-sm-4 ms-md-5">
+            <img src="asset/img/brand.png" alt="logo" class="logo img-fluid">
         </div>
         <ul class="navbar-nav flex-row flex-wrap justify-content-center px-4">
             <li class="nav-item px-3">
@@ -30,10 +36,13 @@
                 <a class="nav-link" href="blog.html">Blog</a>
             </li>
             <li class="nav-item px-3">
-                <a class="nav-link" href="aboutus.html">About Us</a>
+                <a class="nav-link" href="about.html">About Us</a>
             </li>
             <li class="nav-item px-3">
                 <a class="nav-link" href="contact.html">Contact</a>
+            </li>
+            <li class="nav-item px-3">
+                <a class="nav-link" href="todos.html">Todos</a>
             </li>
         </ul>
     </nav>
@@ -41,69 +50,72 @@
 
     <main class="">
         <h1 class="title text-white py-5 text-center">Blog</h1>
-        <div class="mx-3 mt-3">
-            <div class="p-4 p-md-5 mb-4 text-white rounded blog-header">
-                <div class="col-md-6 px-0">
-                    <h1 class="display-4 fst-italic">Lorem Ipsum</h1>
-                    <p class="lead my-3">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum accusamus quia
-                        corporis esse qui eum repellendus neque soluta impedit aperiam, est tenetur perspiciatis, rem
-                        praesentium vero adipisci consequatur? Dolores, temporibus?.
-                    </p>
-                    <p class="lead mb-0"><a href="" class="text-white fw-bold">Continue reading...</a></p>
+        <div class="container">
+            <div class="mx-3 mt-3">
+                <div class="p-4 p-md-5 mb-4 text-white rounded blog-header">
+                    <div class="col-md-6 px-0">
+                        <h1 class="display-4 fst-italic">Lorem Ipsum</h1>
+                        <p class="lead my-3">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum accusamus quia
+                            corporis esse qui eum repellendus neque soluta impedit aperiam, est tenetur perspiciatis,
+                            rem
+                            praesentium vero adipisci consequatur? Dolores, temporibus?.
+                        </p>
+                        <p class="lead mb-0"><a href="" class="text-white fw-bold">Continue reading...</a></p>
+                    </div>
                 </div>
-            </div>
 
-            <div class="row row-cols-1 row-cols-md-2 g-4 mb-5">
-                <div class="col">
-                    <div class="card shadow">
-                        <img src="./asset/img/blog.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Lorem Ipsum</h5>
-                            <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab eius,
-                                similique distinctio nostrum repellendus quibusdam iste assumenda laudantium quo
-                                nesciunt
-                                odit error vitae. Optio ratione ab quidem! Inventore, rerum veritatis.</p>
-                            <a href="" class="d-flex justify-content-end stretched-link">Continue reading...</a>
+                <div class="row row-cols-1 row-cols-md-2 g-4 mb-5">
+                    <div class="col">
+                        <div class="card shadow">
+                            <img src="./asset/img/blog.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Lorem Ipsum</h5>
+                                <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab eius,
+                                    similique distinctio nostrum repellendus quibusdam iste assumenda laudantium quo
+                                    nesciunt
+                                    odit error vitae. Optio ratione ab quidem! Inventore, rerum veritatis.</p>
+                                <a href="" class="d-flex justify-content-end stretched-link">Continue reading...</a>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col">
-                    <div class="card shadow">
-                        <img src="./asset/img/blog.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Lorem Ipsum</h5>
-                            <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab eius,
-                                similique distinctio nostrum repellendus quibusdam iste assumenda laudantium quo
-                                nesciunt
-                                odit error vitae. Optio ratione ab quidem! Inventore, rerum veritatis.</p>
-                            <a href="" class="d-flex justify-content-end stretched-link">Continue reading...</a>
+                    <div class="col">
+                        <div class="card shadow">
+                            <img src="./asset/img/blog.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Lorem Ipsum</h5>
+                                <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab eius,
+                                    similique distinctio nostrum repellendus quibusdam iste assumenda laudantium quo
+                                    nesciunt
+                                    odit error vitae. Optio ratione ab quidem! Inventore, rerum veritatis.</p>
+                                <a href="" class="d-flex justify-content-end stretched-link">Continue reading...</a>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col">
-                    <div class="card shadow">
-                        <img src="./asset/img/blog.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Lorem Ipsum</h5>
-                            <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab eius,
-                                similique distinctio nostrum repellendus quibusdam iste assumenda laudantium quo
-                                nesciunt
-                                odit error vitae. Optio ratione ab quidem! Inventore, rerum veritatis.</p>
-                            <a href="" class="d-flex justify-content-end stretched-link">Continue reading...</a>
+                    <div class="col">
+                        <div class="card shadow">
+                            <img src="./asset/img/blog.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Lorem Ipsum</h5>
+                                <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab eius,
+                                    similique distinctio nostrum repellendus quibusdam iste assumenda laudantium quo
+                                    nesciunt
+                                    odit error vitae. Optio ratione ab quidem! Inventore, rerum veritatis.</p>
+                                <a href="" class="d-flex justify-content-end stretched-link">Continue reading...</a>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col">
-                    <div class="card shadow">
-                        <img src="./asset/img/blog.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Lorem Ipsum</h5>
-                            <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab eius,
-                                similique distinctio nostrum repellendus quibusdam iste assumenda laudantium quo
-                                nesciunt
-                                odit error vitae. Optio ratione ab quidem! Inventore, rerum veritatis.</p>
-                            <a href="" class="d-flex justify-content-end stretched-link">Continue reading...</a>
+                    <div class="col">
+                        <div class="card shadow">
+                            <img src="./asset/img/blog.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Lorem Ipsum</h5>
+                                <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab eius,
+                                    similique distinctio nostrum repellendus quibusdam iste assumenda laudantium quo
+                                    nesciunt
+                                    odit error vitae. Optio ratione ab quidem! Inventore, rerum veritatis.</p>
+                                <a href="" class="d-flex justify-content-end stretched-link">Continue reading...</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -130,23 +142,22 @@
                 </div>
                 <div class="col-md-4">
                     <div class="footer-item">
-                        <h3 class="footer-title mb-2">Follow Us</h3>
-                        <div class="footer-social d-flex flex-column">
-                            <a href="#" class="footer-social-item  mb-3">
-                                <img src="asset/icon/facebook.png" alt="fb" class="icon">
-                                White Picture Studio
+                        <h3 class="footer-title">Follow Us</h3>
+                        <div class="footer-social">
+                            <a href="#" class="footer-social-item">
+                                <i class="fa-brands fa-facebook-square"></i>
                             </a>
-                            <a href="#" class="footer-social-item mb-3">
-                                <img src="asset/icon/twitter.png" alt="tw" class="icon">
-                                @whitepicturestudio
+                            <a href="#" class="footer-social-item">
+                                <i class="fa-brands fa-instagram-square"></i>
                             </a>
-                            <a href="#" class="footer-social-item mb-3">
-                                <img src="asset/icon/instagram.png" alt="ig" class="icon">
-                                @whitepicturestudio
+                            <a href="#" class="footer-social-item">
+                                <i class="fa-brands fa-twitter-square"></i>
                             </a>
-                            <a href="#" class="footer-social-item mb-3">
-                                <img src="asset/icon/youtube.png" alt="yt" class="icon">
-                                White Picture Studio
+                            <a href="#" class="footer-social-item">
+                                <i class="fa-brands fa-telegram"></i>
+                            </a>
+                            <a href="#" class="footer-social-item">
+                                <i class="fa-brands fa-youtube-square"></i>
                             </a>
                         </div>
                     </div>
