--- a/contact.html
+++ b/contact.html
@@ -5,19 +5,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Google Font API -->
     <link href='https://fonts.googleapis.com/css?family=Ms Madi' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
+    <!-- Bootstrap 5.1.3 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="style_home.css">
+    <!-- FontAwesome -->
+    <script src="asset/fontawesome-free-6.1.1-web/js/all.js"></script>
+    <!-- Eksternal CSS -->
+    <link rel="stylesheet" href="style_home.css" />
     <link rel="stylesheet" href="style_contact.css">
-    <title>Contact Us</title>
+    <title>Document</title>
 </head>
 
 <body>
     <!-- Navigasi Start -->
     <nav class="navbar flex-column">
         <div class="navbar-brand mb-4 mt-4 mb-sm-0 mt-sm-0">
-            <img src="asset/img/brand.png" alt="logo" class="logo img-fluid ms-3 ms-sm-4 ms-md-5">
+            <img src="asset/img/brand.png" alt="logo" class="logo img-fluid">
         </div>
         <ul class="navbar-nav flex-row flex-wrap justify-content-center px-4">
             <li class="nav-item px-3">
@@ -30,10 +36,13 @@
                 <a class="nav-link" href="blog.html">Blog</a>
             </li>
             <li class="nav-item px-3">
-                <a class="nav-link" href="aboutus.html">About Us</a>
+                <a class="nav-link" href="about.html">About Us</a>
             </li>
             <li class="nav-item px-3">
                 <a class="nav-link" href="contact.html">Contact</a>
+            </li>
+            <li class="nav-item px-3">
+                <a class="nav-link" href="todos.html">Todos</a>
             </li>
         </ul>
     </nav>
@@ -102,16 +111,19 @@
                         <h3 class="footer-title">Follow Us</h3>
                         <div class="footer-social">
                             <a href="#" class="footer-social-item">
-                                <img src="asset/icon/facebook.png" alt="fb" class="icon">
+                                <i class="fa-brands fa-facebook-square"></i>
                             </a>
                             <a href="#" class="footer-social-item">
-                                <img src="asset/icon/twitter.png" alt="tw" class="icon">
+                                <i class="fa-brands fa-instagram-square"></i>
                             </a>
                             <a href="#" class="footer-social-item">
-                                <img src="asset/icon/instagram.png" alt="ig" class="icon">
+                                <i class="fa-brands fa-twitter-square"></i>
                             </a>
                             <a href="#" class="footer-social-item">
-                                <img src="asset/icon/youtube.png" alt="yt" class="icon">
+                                <i class="fa-brands fa-telegram"></i>
+                            </a>
+                            <a href="#" class="footer-social-item">
+                                <i class="fa-brands fa-youtube-square"></i>
                             </a>
                         </div>
                     </div>
