--- a/about.html
+++ b/about.html
@@ -14,52 +14,67 @@
     <!-- FontAwesome -->
     <script src="asset/fontawesome-free-6.1.1-web/js/all.js"></script>
     <!-- Eksternal CSS -->
-    <link rel="stylesheet" href="css/style_home.css" />
+    <link rel="stylesheet" href="css/style_index.css" />
     <link rel="stylesheet" href="css/style_about.css">
     <title>Document</title>
 </head>
 
 <body>
     <!-- Navigasi Start -->
-    <nav class="navbar flex-column">
-        <div class="navbar-brand mb-4 mt-4 mb-sm-0 mt-sm-0">
-            <img src="asset/img/brand.png" alt="logo" class="logo img-fluid">
+    <nav class="navbar navbar-custom sticky-top navbar-expand-lg navbar-light">
+        <div class="container">
+            <a class="navbar-brand fw-bold" href="index.html">
+                WhitePicture Studio
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbars"
+                aria-controls="navbars" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbars">
+                <ul class="navbar-nav ms-auto mb-2 mb-md-0">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="portfolio.html">Portfolio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="blog.html">Blog</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="about.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="todos.html">Todos</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-        <ul class="navbar-nav flex-row flex-wrap justify-content-center px-4">
-            <li class="nav-item px-3">
-                <a class="nav-link" href="home.html">Home</a>
-            </li>
-            <li class="nav-item px-3">
-                <a class="nav-link" href="portfolio.html">Portfolio</a>
-            </li>
-            <li class="nav-item px-3">
-                <a class="nav-link" href="blog.html">Blog</a>
-            </li>
-            <li class="nav-item px-3">
-                <a class="nav-link" href="about.html">About Us</a>
-            </li>
-            <li class="nav-item px-3">
-                <a class="nav-link" href="contact.html">Contact</a>
-            </li>
-            <li class="nav-item px-3">
-                <a class="nav-link" href="todos.html">Todos</a>
-            </li>
-        </ul>
     </nav>
     <!-- Navigasi End -->
 
     <div class="about-section">
-        <h1 style="font-family: MS Madi;">About Us</h1>
-        <p>White Picture Studio based trusted marketplace that connects travelers with wide array network of over 700+
-            local photographers in 400+ destinations around the world. Our job is simply coordinate photo tour sessions
-            that captures the best moment while you and your loved ones exploring new places in the couple of hours. Our
-            purpose is to change the way people remember their trips by giving one-of-a-kind experience and stunning
-            photographs to make their trip unforgettable.
-            Whether you are in honeymoon, anniversary, proposal, family session, friend/group getaway, or even solo
-            travel; we will exclusively make your moment nicely taken. For your convenience, all of our
-            photographer-partners in Frame A Trip have been curated based on their skill, style and (minimum) 5 years
-            experience in the scope of photography.
-            So Maximize your amazing travel experiences by letting us capture your best moments!</p>
+        <div class="container">
+            <h1 style="font-family: MS Madi;">About Us</h1>
+            <p>White Picture Studio based trusted marketplace that connects travelers with wide array network of over
+                700+
+                local photographers in 400+ destinations around the world. Our job is simply coordinate photo tour
+                sessions
+                that captures the best moment while you and your loved ones exploring new places in the couple of hours.
+                Our
+                purpose is to change the way people remember their trips by giving one-of-a-kind experience and stunning
+                photographs to make their trip unforgettable.
+                Whether you are in honeymoon, anniversary, proposal, family session, friend/group getaway, or even solo
+                travel; we will exclusively make your moment nicely taken. For your convenience, all of our
+                photographer-partners in Frame A Trip have been curated based on their skill, style and (minimum) 5
+                years
+                experience in the scope of photography.
+                So Maximize your amazing travel experiences by letting us capture your best moments!</p>
+        </div>
     </div>
 
     <div class="mb-5">
@@ -106,20 +121,23 @@
         </div>
 
         <div class="closing">
-            <h2 class="text-closing" style="text-align:center">Connect With Us !</h2>
-            <p style="font-size: small;">
-                Our head office based on Bandung, Indonesia
-                <br>
-                Email : <a href="whitepicturestudio@gmail.com"> whitepicturestudio@gmail.com </a>
-                <br>
-                Office hour: Mon-Fri 10am-7pm (GMT+7)
-                <br>
-                Phone : (+62) 1234 5678 910, (+62) 1098 7654 321
-                <br>
-                <br>
-                Are you in the same mission with us to help your client feeling the best holiday memories? Or are you a
-                Travel Agent, Wedding Planner, Hotel, Etc? Feel free to talk with us for any partnership.
-            </p>
+            <div class="container">
+                <h2 class="text-closing" style="text-align:center">Connect With Us !</h2>
+                <p class="ms-0">
+                    Our head office based on Bandung, Indonesia
+                    <br>
+                    Email : <a href="whitepicturestudio@gmail.com"> whitepicturestudio@gmail.com </a>
+                    <br>
+                    Office hour: Mon-Fri 10am-7pm (GMT+7)
+                    <br>
+                    Phone : (+62) 1234 5678 910, (+62) 1098 7654 321
+                    <br>
+                    <br>
+                    Are you in the same mission with us to help your client feeling the best holiday memories? Or are
+                    you a
+                    Travel Agent, Wedding Planner, Hotel, Etc? Feel free to talk with us for any partnership.
+                </p>
+            </div>
         </div>
     </div>
 
@@ -173,6 +191,9 @@
         </div>
     </footer>
     <!-- Footer End -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
