--- a/contact.html
+++ b/contact.html
@@ -14,37 +14,46 @@
     <!-- FontAwesome -->
     <script src="asset/fontawesome-free-6.1.1-web/js/all.js"></script>
     <!-- Eksternal CSS -->
-    <link rel="stylesheet" href="css/style_home.css" />
+    <link rel="stylesheet" href="css/style_index.css" />
     <link rel="stylesheet" href="css/style_contact.css">
     <title>Document</title>
 </head>
 
 <body>
     <!-- Navigasi Start -->
-    <nav class="navbar flex-column">
-        <div class="navbar-brand mb-4 mt-4 mb-sm-0 mt-sm-0">
-            <img src="asset/img/brand.png" alt="logo" class="logo img-fluid">
+    <nav class="navbar navbar-custom sticky-top navbar-expand-lg navbar-light">
+        <div class="container">
+            <a class="navbar-brand fw-bold" href="index.html">
+                WhitePicture Studio
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbars"
+                aria-controls="navbars" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbars">
+                <ul class="navbar-nav ms-auto mb-2 mb-md-0">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="portfolio.html">Portfolio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="blog.html">Blog</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="about.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="todos.html">Todos</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-        <ul class="navbar-nav flex-row flex-wrap justify-content-center px-4">
-            <li class="nav-item px-3">
-                <a class="nav-link" href="home.html">Home</a>
-            </li>
-            <li class="nav-item px-3">
-                <a class="nav-link" href="portfolio.html">Portfolio</a>
-            </li>
-            <li class="nav-item px-3">
-                <a class="nav-link" href="blog.html">Blog</a>
-            </li>
-            <li class="nav-item px-3">
-                <a class="nav-link" href="about.html">About Us</a>
-            </li>
-            <li class="nav-item px-3">
-                <a class="nav-link" href="contact.html">Contact</a>
-            </li>
-            <li class="nav-item px-3">
-                <a class="nav-link" href="todos.html">Todos</a>
-            </li>
-        </ul>
     </nav>
     <!-- Navigasi End -->
 
@@ -139,7 +148,9 @@
         </div>
     </footer>
     <!-- Footer End -->
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
