--- a/todos.html
+++ b/todos.html
@@ -14,44 +14,53 @@
     <!-- FontAwesome -->
     <script src="asset/fontawesome-free-6.1.1-web/js/all.js"></script>
     <!-- Eksternal CSS -->
-    <link rel="stylesheet" href="css/style_home.css" />
+    <link rel="stylesheet" href="css/style_index.css" />
     <link rel="stylesheet" href="css/style_todos.css" />
     <title>Document</title>
 </head>
 
 <body>
     <!-- Navbar Start -->
-    <nav class="navbar flex-column">
-        <div class="navbar-brand mb-4 mt-4 mb-sm-0 mt-sm-0">
-            <img src="asset/img/brand.png" alt="logo" class="logo img-fluid">
+    <nav class="navbar navbar-custom sticky-top navbar-expand-lg navbar-light">
+        <div class="container">
+            <a class="navbar-brand fw-bold" href="index.html">
+                WhitePicture Studio
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbars"
+                aria-controls="navbars" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbars">
+                <ul class="navbar-nav ms-auto mb-2 mb-md-0">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="portfolio.html">Portfolio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="blog.html">Blog</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="about.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="todos.html">Todos</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-        <ul class="navbar-nav flex-row flex-wrap justify-content-center px-4">
-            <li class="nav-item px-3">
-                <a class="nav-link" href="home.html">Home</a>
-            </li>
-            <li class="nav-item px-3">
-                <a class="nav-link" href="portfolio.html">Portfolio</a>
-            </li>
-            <li class="nav-item px-3">
-                <a class="nav-link" href="blog.html">Blog</a>
-            </li>
-            <li class="nav-item px-3">
-                <a class="nav-link" href="about.html">About Us</a>
-            </li>
-            <li class="nav-item px-3">
-                <a class="nav-link" href="contact.html">Contact</a>
-            </li>
-            <li class="nav-item px-3">
-                <a class="nav-link" href="todos.html">Todos</a>
-            </li>
-        </ul>
     </nav>
     <!-- Navbar End -->
 
     <!-- Todo List Start -->
     <main>
         <h1 class="title text-center py-5">To-Do List</h1>
-        <div class="container-todo rounded-1">
+        <div class="container-todo rounded-1 pt-4 my-5">
             <form class="js-form mb-2">
                 <input autofocus type="text" aria-label="Enter a new todo item" placeholder="Masukkan to-do di sini"
                     class="js-todo-input rounded-1">
@@ -115,7 +124,7 @@
     <!-- Todo List End -->
 
     <!-- Footer Start -->
-    <footer class="footer">
+    <footer class="footer mt-auto">
         <div class="container">
             <div class="row detail">
                 <div class="col-md-4">
@@ -166,14 +175,8 @@
     <!-- Footer End -->
 
     <script src="script.js"></script>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
-    </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"
-        integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous">
-    </script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"
-        integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
 </body>
 
